--- a/src/main/java/dungeon/gui/game_gui.fxml
+++ b/src/main/java/dungeon/gui/game_gui.fxml
@@ -2,17 +2,51 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.control.*?>
 
 <BorderPane prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dungeon.gui.Controller">
+    <top>
+        <HBox spacing="20" alignment="CENTER_LEFT">
+            <Label text="HP:" />
+            <Label fx:id="hpLabel" text="10" />
+            <Label text="Score:" />
+            <Label fx:id="scoreLabel" text="0" />
+            <Label text="Steps:" />
+            <Label fx:id="stepsLabel" text="0" />
+            <Button fx:id="helpButton" text="Help" />
+            <Button fx:id="saveButton" text="Save" />
+            <Button fx:id="loadButton" text="Load" />
+            <Label text="Difficulty:" />
+            <TextField fx:id="difficultyField" text="3" prefWidth="40" />
+            <Button fx:id="runButton" text="Run" />
+        </HBox>
+    </top>
     <padding>
         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
     </padding>
-
     <center>
-        <GridPane fx:id="gridPane" prefHeight="400.0" prefWidth="400.0" BorderPane.alignment="CENTER">
-
-        </GridPane>
+        <VBox alignment="CENTER" spacing="10">
+            <GridPane fx:id="gridPane" prefHeight="200.0" prefWidth="200.0" hgap="2" vgap="2" />
+            <HBox alignment="CENTER" spacing="10">
+                <Button fx:id="upButton" text="Up" />
+            </HBox>
+            <HBox alignment="CENTER" spacing="10">
+                <Button fx:id="leftButton" text="Left" />
+                <Button fx:id="downButton" text="Down" />
+                <Button fx:id="rightButton" text="Right" />
+            </HBox>
+            <HBox alignment="CENTER" spacing="10">
+                <Button fx:id="useLadderButton" text="Use Ladder" disable="true" />
+            </HBox>
+        </VBox>
     </center>
-
-
+    <right>
+        <VBox spacing="10" alignment="TOP_CENTER">
+            <Label text="Top Scores" style="-fx-font-weight: bold;" />
+            <ListView fx:id="topScoresList" prefWidth="180" prefHeight="200" />
+        </VBox>
+    </right>
+    <bottom>
+        <TextArea fx:id="statusArea" prefHeight="100.0" editable="false" wrapText="true" />
+    </bottom>
 </BorderPane>
